Feature: Add a docker container for qt4
* build the container and store it on github

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,11 @@ jobs:
         include:
           - distro: focal
             clang_major: 10
+            qbs_version: 1.20.1
+            docker_file: Dockerfile_qt4
+
+          - distro: focal
+            clang_major: 10
             qt: 5.15.2
             qt_major: 515
             qbs_version: 1.20.1
