--- a/Dockerfile_qt4
+++ b/Dockerfile_qt4
@@ -58,7 +58,9 @@ ENV \
     QTDIR=/usr/lib/x86_64-linux-gnu/qt4/ \
     PATH=/usr/lib/x86_64-linux-gnu/qt4/bin:/opt/qbs/bin:${PATH} \
     LD_LIBRARY_PATH=/opt/qsql_plugin:/usr/lib/x86_64-linux-gnu/:${LD_LIBRARY_PATH} \
-    PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig/:${PKG_CONFIG_PATH}
+    PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig/:${PKG_CONFIG_PATH} \
+    CXX="clang++-${CLANG_MAJOR}" \
+    CC="clang-${CLANG_MAJOR}"
 
 RUN apt-get -y update && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     git \
